2011-04-03  Ivan Maidanski  <ivmai@mail.ru>

	* misc.c (GC_stdout, GC_stderr): Move the definition to the place
	where GC_log is defined (Unix only).
	* misc.c (GC_init): Recognize "GC_ONLY_LOG_TO_FILE" environment
	variable and the similar macro; redirect GC_stdout and GC_stderr
	to GC_log if "GC_LOG_FILE" environment variable is set unless
	prohibited by GC_ONLY_LOG_TO_FILE (Unix only).
	* doc/README.environment (GC_ONLY_LOG_TO_FILE): Document.
	* doc/README.macros (GC_ONLY_LOG_TO_FILE): Ditto.

2011-04-03  Ivan Maidanski  <ivmai@mail.ru>

	* misc.c (GC_stdout, GC_write): Rename GC_stdout to GC_log (Win32
	only).
	* misc.c (GC_write): Add for MacOS (and OS/2); change WRITE()
	accordingly.
	* misc.c (GC_write): Reformat code (Unix only).
	* misc.c (GC_printf): Check GC_quiet before va_start().

2011-04-03  Ivan Maidanski  <ivmai@mail.ru>

	* allchblk.c (GC_freehblk): Use GC_log_printf instead of GC_printf
	inside "if (GC_print_stats)" branch.
	* alloc.c (GC_collect_or_expand): Ditto.
	* dyn_load.c (GC_register_dynamic_libraries): Ditto.
	* headers.c (GC_scratch_alloc): Ditto.
	* os_dep.c (GC_get_maps, GC_remap, PROTECT,
	GC_write_fault_handler, GC_dirty_init, GC_mprotect_thread): Ditto.
	* alloc.c (min_bytes_allocd): Use GC_log_printf instead of
	GC_printf for DEBUG_THREADS output.
	* darwin_stop_world.c (GC_stack_range_for, GC_suspend_thread_list,
	GC_stop_world, GC_thread_resume, GC_start_world): Ditto.
	* pthread_start.c (GC_inner_start_routine): Ditto.
	* pthread_stop_world.c (GC_suspend_handler, GC_restart_handler,
	GC_push_all_stacks, GC_suspend_all, GC_stop_world,
	GC_start_world): Ditto.
	* pthread_support.c (GC_mark_thread, GC_get_nprocs,
	GC_start_rtn_prepare_thread, pthread_create): Ditto.
	* alloc.c (GC_adj_bytes_allocd, GC_maybe_gc, GC_stopped_mark,
	GC_finish_collection): Reformat code.
	* pthread_stop_world.c (GC_print_sig_mask): Ditto.
	* pthread_support.c (GC_thr_init): Ditto.
	* checksums.c (GC_update_check_page): Use GC_printf() instead of